# metro-jam

./: .clang-format  .gitattributes  .gitignore  Assets.png.import  CMakeLists.txt  CMakePresets.json  Character_Sprite_Sheet.png.import  CoreGame.gdextension  FireParticle.gdshader  README.md  Untitled Diagram.drawio  Water.gdshader  download_artifacts.py  enable_debugger.sh  export_presets.cfg  icon.png.import  icon.svg.import  pixel.gdshader  project.godot
.githooks/: post-merge
.github/workflows/: build.yml  editor_settings-4.tres
assets/: Assets.png.import  coin.png.import  crate.png.import  health_bar.png.import  light_bulb_sprite.png.import  pg_animantion_fullset.png.import  pg_animantion_fullset_v1.png.import  pg_sprites_v2.png.import
assets/audio/: WrenchmanTheme.mp3.import  bottle_pop.wav.import  checkpoint.wav.import  die.wav.import  footsteps.wav.import  grenade_explosion.mp3.import  item_pickup.wav.import  jump.wav.import  metallic_strike.mp3.import  ouch.wav.import
assets/characters/: bumblebee_sprites.png.import  enemy_soldier_sprites.png.import  granade_sprites.png.import  pg_sprites.png.import  poison_bullet.png.import  poison_ranger_sprites.png.import
assets/fonts/: Pixeled.ttf.import
assets/icons/: air_jump.png.import  grenade.png.import  slide_icon.png.import
assets/palette/: metroidvania_jam_palette.ase  metroidvania_jam_palette.png.import
assets/screens/: bg_darkblue.png.import  game_over_screen.png.import  start_screen.png.import  theend_screen.png.import  youwin_screen.png.import
assets/textures/: health_bar.png.import  key_sprite.png.import  light.png.import  (+3 more)
assets_temp/: coin.png.import  crate.png.import
cmake/: deps.cmake
kenney_abstract-platformer/: Preview.png.import  Preview_KenneyNL.png.import  Sample.png.import
pg/: Animations.ase  pg_animantion_fullset.png.import  pg_animantion_fullset_v1.png.import  pg_animation_fullset.ase  pg_l animantion fullset.ase  pg_l animantion fullset.png.import  pg_l_idle.ase  pg_model_draft01.ase  pg_r animantion fullset.ase  pg_r animantion fullset.png.import  pg_r animantion_fullset.png.import  pg_r_idle.ase  pg_r_idle.png.import  pg_r_jumpin.ase  pg_r_jumpin.png.import  pg_r_run.ase  pg_r_run.png.import  pg_r_slide.ase  pg_r_walk.ase
scenes/: Bumblee.tscn  DummyMap.tscn  ExitDoor.gd  LifeBar.tscn  Slide.tscn  autohide_label.tscn  blob_granade.tscn  block.tscn  bumblee_bee.tscn  checkpoint.tscn  chest.tscn  chest_vanilla.tscn  coin.tscn  dummy_map.tscn  enemy_soldier.tscn  exit_key.tscn  gate.tscn  grenade.tscn  grenade_launcher.tscn  hud.tscn  life.tscn  main.tscn  platform.tscn  platform_system.tscn  player.tscn  poison_ranger.tscn  shaders_experiments.tscn  shadow_area.tscn  steam_door.tscn  steam_jet.tscn  steam_jet_downward.tscn  wrench.tscn
scripts/: ExitKey.gd  PlatformSystem.gd  ShadowArea.gd  autohide_label.gd  blob_granade.gd  block.gd  checkpoint.gd  damageable.gd  grenade_launcher.gd  life.gd  platform.gd  player.gd  steam_door.gd  steam_jet.gd
shaders/: CoolDown.gdshader  Fire.gdshader  Fire.material  Hit.gdshader  Hit.material  Pixel.gdshader  SteamParticle.material  Water.material
src/: bumblebee.cpp  bumblebee.hpp  chest.cpp  chest.hpp  coin.cpp  coin.hpp  coin_spawner.cpp  coin_spawner.hpp  commands.hpp  constants.hpp  damageable.cpp  damageable.hpp  enemy_soldier.cpp  enemy_soldier.hpp  gate.cpp  gate.hpp  gdexample.cpp  gdexample.hpp  grenade.cpp  grenade.hpp  grenade_launcher.cpp  grenade_launcher.hpp  gun.cpp  gun.hpp  health_bar.cpp  health_bar.hpp  hud.cpp  hud.hpp  io.cpp  io.hpp  lifebar.cpp  lifebar.hpp  logger.cpp  logger.hpp  macros.hpp  main_scene.cpp  main_scene.hpp  persist.cpp  persist.hpp  player.cpp  (+26 more)
test/: test_script.gd
textures/: smoke.png.import
tilesets/: DummyMap.tres  Tileset.png.import  TilesetBlocks.tres
(+406 files in other folders)
